# rusty-robin

./: Cargo.toml  README.md  main.yaml
libs/common/: Cargo.toml
libs/common/src/: lib.rs
libs/logging/: Cargo.toml
libs/logging/src/: lib.rs
libs/web3/: Cargo.toml
libs/web3/src/: errors.rs  events.rs  lib.rs
src/: cex.rs  errors.rs  ethers.rs  lib.rs  os.rs
src/cex/: binance.rs
src/ethers/: call.rs  chain.rs  provider.rs  types.rs  utils.rs
