[package]
name = "rusty-robin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
claim = "0.5.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
