[package]
name = "rusty-robin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
claims = "0.7.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"]}
getset = "0.1.2"

[dependencies.ethers]
version = "2.0.0"

