[package]
name = "rusty-robin"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = [
  # binaries
  "bin/wizard",

  # libraries
  "libs/web3",
  "libs/common"
]

[workspace.dependencies]
once_cell = "1.17.1"
thiserror = "1.0.38"
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_with = "2.3.2"
dotenvy = "0.15.6"
tokio = { version = " 1.25.0", features = ["full"]}
derive_more = "0.99.17"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
claims = "0.7.1"
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
futures = "0.3.27"
tokio = { version = "1.26.0", features = ["full"]}
getset = "0.1.2"
delegate = "0.9.0"
binance-rs-async = "1.3.1"
ractor = "0.7.5"
cached = "0.42.0"


[dependencies.ethers]
version = "2.0.0"

