[package]
name = "rr-logging"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter", "time", "json"] }
tracing-bunyan-formatter = "0.3.4"
tracing-appender = "0.2.2"
paris = { version = "1.5.15", features = ["macros"]}
